openshift/oc-route-template.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anomaly-predictor-route
  labels:
    app: anomaly-predictor
spec:
  to:
    kind: Service
    name: anomaly-predictor-service
